--- a/project/package.json
+++ b/project/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.1",
     "bootstrap": "^3.4.1",
     "element-ui": "^2.6.3",
+    "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
